--- a/scss/_banner.scss
+++ b/scss/_banner.scss
@@ -53,6 +53,7 @@
                     font-weight: 600;
                     font-size: 40px;
                     color: #000;
+                    padding-right: 42px;
                 }
                 p{
                     font-size: 15px;
