--- a/css/style.css
+++ b/css/style.css
@@ -176,6 +176,7 @@ img {
   font-weight: 600;
   font-size: 40px;
   color: #000;
+  padding-right: 42px;
 }
 
 #banner .banner-slider .banner-item .banner-text p {
